# oante

./: .gitignore  README.md  definitions.py  log.txt  main.py  pyproject.toml
src/oante/: __init__.py  definitions.py
src/toki_pona_translator_nixii/: __init__.py
