[build-system]
requires = ["hatchling >= 1.26"]
build-backend "hatchling.build"

# TODO: add the info
[project]
name = ["toki_pona_translator_NIXII"]
version = "1.0.0"
authors = [
     { name="Nixii", email="" }
]
description = "Literally translate a toki pona string into English. Meant for learners."
readme = "README.md"
license = "Unlicense"
license-files = ["LICENSE"]
classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
]
